MariaDB.yaml
# ============================================================
# Namespace
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: database-namespace

---
# ============================================================
# Service
# MariaDB bleibt von außen erreichbar
# 144.24.232.203:10001 -> 3306
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: database-namespace
spec:
  selector:
    app: mariadb
  type: LoadBalancer
  loadBalancerIP: 144.24.232.203
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 3306

---
# ============================================================
# MariaDB Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: database-namespace
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb

    spec:
      containers:
        - name: mariadb
          image: mariadb:11.8.8-ubi9

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
