MySQL.yaml
# Weiterleitung des Ports 3306 der MySQL-Datenbank auf den Port 10002 des lokalen Rechners, damit man über den lokalen Rechner auf die Datenbank zugreifen kann.
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: database-namespace
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30001
      port: 3306
      targetPort: 3306
---
# Deployment für die MySQL-Datenbank, die in einem Pod läuft. Das Deployment stellt sicher, dass immer die Anzahl an gewünschte Pods laufen. Der Pod wird mit einem PersistentVolumeClaim verbunden, um die Daten zu speichern.
# Ebenfalls werden Umgebungsvariablen für das Root-Passwort und den Datenbanknamen gesetzt.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: database-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:9.7.2-oraclelinux9
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
