PostGreSQL.yaml
# Weiterleitung des Ports 3306 der PostGreSQL-Datenbank auf den Port 10003 des lokalen Rechners, damit man über den lokalen Rechner auf die Datenbank zugreifen kann.
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: database-namespace
spec:
  selector:
    app: postgresql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10003
      targetPort: 3306
---
# Deployment für die PostGreSQL-Datenbank, die in einem Pod läuft. Das Deployment stellt sicher, dass immer die Anzahl an gewünschte Pods laufen. Der Pod wird mit einem PersistentVolumeClaim verbunden, um die Daten zu speichern.
# Ebenfalls werden Umgebungsvariablen für das Root-Passwort und den Datenbanknamen gesetzt.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: database-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:17.10-trixie
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: postgresql-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-storage
          persistentVolumeClaim:
            claimName: postgresql-pvc
