ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: database-namespace
spec:
  rules:
  - host: mysql.db.infra.lomdev.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql-ingress
  namespace: database-namespace
spec:
  rules:
  - host: postgresql.db.infra.lomdev.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql-service
            port:
              number: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  namespace: database-namespace
spec:
  rules:
  - host: mariadb.db.infra.lomdev.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb-service
            port:
              number: 3306
